	1. implement DRBranch and DRStrength.
	2. radial solver for Rydberg states has been improved.
	3. implement TotalRRCross function.
	4. Change the default AngZCut and MixCut to smaller values.
	5. made the transition of RR and PI from low to high energy more
	   smooth. 
	6. add DRS and RE calculation in DRStrength.
	7. add KLnl->Knl Auger damping.
	8. adjust various n limits in atom.py
	
Version 0.8.5, 11/07/2002
	1. reinitializing GOS Array in the end of CETable call.
	2. fix the bug in GeneralizedMoments.
	3. fix a bug in RRRate1E and PIRate1E.
	4. correct the spelling in table.write_row (was raw)

Version 0.8.4, 09/26/2002
	1. the type of EN_RECORD.energy is changed to double, 
	   to avoid cancellations. this makes the data file incompartible 
	   with earlier version.
	2. change the lib. name of lapack, blas, minpack, quadpack, ode, 
	   mpfun, to avoid possible clash with system installations.
	   

Version 0.8.3, 09/25/2002
	1. implement Breit interaction in the 0 energy limit of the
	   exchanged photon.
	2. Vacuum polarization using Fullerton & Rinker's formula.
	3. Self-energy correction using Mohr and Mohr & Kim's table.
	4. Normal and specific mass shift. The square of kinetic energy 
	   terms is ignored.
	5. fix a bug in ConfigEnergy.
	
Version 0.8.2, 09/20/2002
	1. ConfigEnergy correction based on configurations.
	2. add RefineRadial function, maybe usefule for neutrals.
	3. fix a bug in RadialBound.
	4. fix a bug for lsode.
	
Version 0.8.1, 09/03/2002
	1. fix the unit bug for PhFit.
	2. add PICrossH and RRCrossH functions.
	3. add H approximation for very high n states, where the
	   wavefunction calculation is avoided completely. At present,
	   it only works for energy levels, E1 transitions and RR & PI 
	   cross sections.
	4. add the Mixing coefficients output to the BasisTable function.
	
Version 0.8.0, 08/30/2002
	1. add the ionization and recombinaiton fitting formula from
	   Verner and Mazzotta.
	
Version 0.7.9, 08/27/2002