@@ -8,7 +8,7 @@
 %DVIPSWebPage: (www.radicaleye.com)
 %DVIPSCommandLine: dvips -o manual.ps manual
 %DVIPSParameters: dpi=600, compressed
-%DVIPSSource:  TeX output 2002.12.05:2120
+%DVIPSSource:  TeX output 2002.12.14:1130
 %%BeginProcSet: texc.pro
 %!
 /TeXDict 300 dict def TeXDict begin/N{def}def/B{bind def}N/S{exch}N/X{S
@@ -5030,103 +5030,106 @@ Fl(13,)k(no)g(sp)r(ectroscopic)f(sym)n(b)r(ol)i(is)f(a)n(v)-5
 b(ailable,)26 b(it)i(is)g(sp)r(eci\014ed)g(as)f([)p Fi(l)r
 Fl(])g(suc)n(h)g(as)g([14,15])f(for)h Fi(l)e Fl(=)d(14)27
 b(and)g(15)g(shells.)0 859 y(This)h(n)n(umerical)e(notation)h(also)g(w)
-n(orks)f(for)h Fi(l)d Fh(\024)f Fl(13)k(shells.)0 1054
+n(orks)f(for)h Fi(l)d Fh(\024)f Fl(13)k(shells.)0 1038
 y Fk(ConfigEnergy)p Fl(\()p Fb(m)k Fl([)p Fb(,)g(n)k
-Fl([)p Fb(,)30 b(g,)h(...)12 b Fl(])g(]\):)0 1154 y(This)31
+Fl([)p Fb(,)30 b(g,)h(...)12 b Fl(])g(]\):)0 1138 y(This)31
 b(function)g(should)g(b)r(e)g(called)f(t)n(wice)h(just)h(b)r(efore)e
 (\(with)i Fb(m)37 b Fl(=)30 b(0\))h(and)g(after)f(\(with)i
 Fb(m)37 b Fl(=)30 b(1\))h Fk(OptimizeRadial)25 b Fl(if)0
-1253 y(used.)57 b(The)34 b(call)g(with)h Fb(m)40 b Fl(=)34
+1237 y(used.)57 b(The)34 b(call)g(with)h Fb(m)40 b Fl(=)34
 b(0)g(p)r(erforms)g(a)g(radial)f(optimization)h(for)f(the)i
 (con\014guration)e(groups)g(giv)n(en)g(b)n(y)h(the)h(list)0
-1353 y Fb(g)p Fl(,)40 b(and)d(calculate)f(the)i(a)n(v)n(erage)c(energy)
+1337 y Fb(g)p Fl(,)40 b(and)d(calculate)f(the)i(a)n(v)n(erage)c(energy)
 i(of)h(eac)n(h)f(con\014guration)g(under)h(suc)n(h)f(p)r(oten)n(tials.)
-65 b(Multiple)38 b(optimizations)0 1452 y(are)32 b(p)r(erformed)h(if)h
+65 b(Multiple)38 b(optimizations)0 1437 y(are)32 b(p)r(erformed)h(if)h
 (more)e(than)i(one)e(list)i(are)e(giv)n(en.)53 b(If)34
 b(none)f(is)g(giv)n(en,)h(the)g(optimization)f(are)f(carried)g(out)h
-(for)g(eac)n(h)0 1552 y(con\014guration)26 b(group.)35
+(for)g(eac)n(h)0 1536 y(con\014guration)26 b(group.)35
 b(If)28 b Fb(m)34 b Fl(=)27 b(0,)g(one)g(ma)n(y)g(also)f(sp)r(ecify)i
 (an)f(in)n(teger)g Fb(n)33 b Fl(to)28 b(indicate)f(that)h
-Fk(RefineRadial\(n\))21 b Fl(should)0 1652 y(b)r(e)27
+Fk(RefineRadial\(n\))21 b Fl(should)0 1636 y(b)r(e)27
 b(called)f(after)g(the)h(optimization.)36 b(The)27 b(call)f(with)h
 Fb(m)33 b Fl(=)26 b(1)g(do)r(es)g(not)g(accept)g(additional)g(argumen)n
-(ts.)36 b(It)26 b(recalculates)0 1751 y(the)33 b(a)n(v)n(erage)d
+(ts.)36 b(It)26 b(recalculates)0 1735 y(the)33 b(a)n(v)n(erage)d
 (energy)h(of)i(eac)n(h)f(con\014guration)f(under)h(the)h(p)r(oten)n
 (tial)g(obtained)f(b)n(y)h Fk(OptimizeRadial)27 b Fl(issured)32
-b(b)n(y)g(the)0 1851 y(user,)i(The)g(diagonal)e(elemen)n(ts)h(of)h(the)
+b(b)n(y)g(the)0 1835 y(user,)i(The)g(diagonal)e(elemen)n(ts)h(of)h(the)
 f(Hamiltonian)h(calculated)f(in)g(the)h Fk(Structure)c
-Fl(call)j(is)h(then)g(adjusted)f(b)n(y)g(the)0 1951 y(di\013erence)27
+Fl(call)j(is)h(then)g(adjusted)f(b)n(y)g(the)0 1935 y(di\013erence)27
 b(of)g(the)h(t)n(w)n(o)e(a)n(v)n(erage)e(energies)i(for)h(eac)n(h)f
 (con\014guration.)35 b(The)27 b(purp)r(ose)g(of)g(this)g(routine)g(is)g
-(to)g(remo)n(v)n(e)e(some)0 2050 y(of)j(the)g(errors)d(in)j(the)g(lev)n
+(to)g(remo)n(v)n(e)e(some)0 2034 y(of)j(the)g(errors)d(in)j(the)g(lev)n
 (el)f(energies)f(in)n(tro)r(duced)i(b)n(y)f(using)g(a)g(single)g(cen)n
 (tral)g(p)r(oten)n(tial)h(for)f(all)g(con\014gurations.)0
-2250 y Fk(ConvertToSFAC)p Fl(\()p Fb(fn)6 b Fl(\):)0
-2349 y(Con)n(v)n(erts)27 b(the)j(statemen)n(ts)e(b)r(et)n(w)n(een)h
+2218 y Fk(ConvertToSFAC)p Fl(\()p Fb(fn)6 b Fl(\):)0
+2317 y(Con)n(v)n(erts)27 b(the)j(statemen)n(ts)e(b)r(et)n(w)n(een)h
 (this)h(call)e(and)h(the)g Fk(CloseSFAC)d Fl(call)i(to)h(SF)-9
 b(A)n(C)29 b(input)h(\014le)f Fb(fn)p Fl(.)41 b(The)29
-b(resulting)g(\014le)0 2449 y(can)e(then)h(b)r(e)g(run)g(using)f(the)h
+b(resulting)g(\014le)0 2417 y(can)e(then)h(b)r(e)g(run)g(using)f(the)h
 Fk(sfac)e Fl(executable.)36 b(This)28 b(routine)f(is)h(only)f(a)n(v)-5
 b(ailable)26 b(in)i(PF)-9 b(A)n(C)27 b(in)n(terface.)0
-2648 y Fk(CorrectEnergy)p Fl(\()p Fb(fn)e Fh(j)30 b Fb(ilev,)h(e)6
-b Fl(\):)0 2748 y(Correct)32 b(the)j(energies)d(of)i(certain)f(lev)n
-(els)g(b)n(y)h(giv)n(en)f(amoun)n(t.)54 b(This)34 b(is)g(used)g(if)g
-(the)g(exact)f(energy)g(of)h(some)f(lev)n(els)g(is)0
-2848 y(critical.)j(In)28 b(the)f(\014rst)h(form,)f(the)h(indexes)f(and)
+2601 y Fk(CorrectEnergy)p Fl(\()p Fb(fn)e Fh(j)30 b Fb(ilev,)h(e,)f
+(nmin)6 b Fl(\):)0 2700 y(Correct)32 b(the)j(energies)d(of)i(certain)f
+(lev)n(els)g(b)n(y)h(giv)n(en)f(amoun)n(t.)54 b(This)34
+b(is)g(used)g(if)g(the)g(exact)f(energy)g(of)h(some)f(lev)n(els)g(is)0
+2800 y(critical.)j(In)28 b(the)f(\014rst)h(form,)f(the)h(indexes)f(and)
 g(the)h(energy)e(corrections)f(are)i(listed)g(as)g(t)n(w)n(o)g(columns)
-g(in)g(the)h(\014le)g Fb(fn)p Fl(.)37 b(In)0 2947 y(the)24
-b(second)g(form,)g(the)g(indexes)g(are)f(giv)n(en)g(in)h(the)h(Python)e
-(list)h Fb(ilev)p Fl(,)i(and)e(the)g(energy)f(corrections)f(are)h(giv)n
-(en)g(in)h(the)h(list)0 3047 y Fb(e)p Fl(.)39 b(The)28
-b(corrections)e(are)h(giv)n(en)g(in)h(units)h(of)f(eV.)g(F)-7
-b(or)28 b(the)g(\014rst)g(lev)n(el)f(in)i(the)f(correction)f(list,)h
-(the)h(amoun)n(t)e(is)h(added)g(to)0 3147 y(the)g(energies)d
-(calculated)i(b)n(y)g(F)-9 b(A)n(C,)27 b(and)g(that)h(lev)n(el)e(is)h
-(tak)n(en)g(as)f(the)i(reference)e(lev)n(el)h(for)g(all)f(other)h(en)n
-(tries)g(in)g(the)h(list.)0 3246 y(The)g(correction)f(energies)f(in)j
-(the)f(list)g Fb(e)35 b Fl(for)28 b(these)g(other)f(en)n(tries)h(are)f
-(the)h(desired)g(energies)e(relativ)n(e)h(to)h(the)h(reference)0
-3346 y(lev)n(el,)e(i.e.,)h(they)g(replace)e(the)i(energies)f
-(calculated)g(b)n(y)g(F)-9 b(A)n(C.)0 3545 y Fk(DROpen)p
-Fl(\()p Fb(g)7 b Fl(\):)0 3645 y(Calculate)24 b(the)h(principal)f(quan)
+g(in)g(the)h(\014le)g Fb(fn)p Fl(.)37 b(In)0 2900 y(the)31
+b(second)g(form,)g(the)h(indexes)f(are)f(giv)n(en)g(in)h(the)h(Python)e
+(list)h Fb(ilev)p Fl(,)j(and)c(the)i(energy)e(corrections)f(are)h(giv)n
+(en)g(in)h(the)0 2999 y(list)e Fb(e)p Fl(.)40 b(Only)29
+b(lev)n(els)e(with)j(v)-5 b(alence)28 b(electron)g(in)h
+Fi(n)24 b Fh(\025)h Fi(nmin)j Fl(are)f(corrected,)h(if)h(these)g(lev)n
+(els)f(are)f(not)i(constructed)f(with)0 3099 y Fk(RecStates)p
+Fl(.)34 b(The)27 b(corrections)f(are)h(giv)n(en)g(in)h(units)g(of)g
+(eV.)g(F)-7 b(or)27 b(the)h(\014rst)f(lev)n(el)g(in)h(the)h(correction)
+d(list,)i(the)g(amoun)n(t)f(is)0 3198 y(added)e(to)g(the)g(energies)f
+(calculated)h(b)n(y)g(F)-9 b(A)n(C,)25 b(and)g(that)g(lev)n(el)g(is)g
+(tak)n(en)f(as)h(the)g(reference)g(lev)n(el)f(for)h(all)g(other)f(en)n
+(tries)h(in)0 3298 y(the)30 b(list.)43 b(The)30 b(correction)e
+(energies)g(in)i(the)g(list)g Fb(e)36 b Fl(for)30 b(these)f(other)g(en)
+n(tries)g(are)g(the)h(desired)f(energies)f(relativ)n(e)h(to)g(the)0
+3398 y(reference)e(lev)n(el,)g(i.e.,)h(they)f(replace)g(the)h(energies)
+e(calculated)h(b)n(y)h(F)-9 b(A)n(C.)0 3581 y Fk(DROpen)p
+Fl(\()p Fb(g)7 b Fl(\):)0 3681 y(Calculate)24 b(the)h(principal)f(quan)
 n(tum)g(n)n(um)n(b)r(ers)g(at)h(whic)n(h)f(the)h(dielectronic)f(recom)n
 (bnation)f(starts)h(to)g(op)r(en)h(for)f(the)h(core)0
-3745 y(excitations)g(from)h(the)h(ground)e(state)h(to)g(the)g(states)g
+3780 y(excitations)g(from)h(the)h(ground)e(state)h(to)g(the)g(states)g
 (in)h(the)f(con\014guration)f(group)g(list)h Fb(g)p Fl(.)37
-b(It)26 b(returns)g(a)f(list)i(of)f(in)n(tegers.)0 3944
+b(It)26 b(returns)g(a)f(list)i(of)f(in)n(tegers.)0 3964
 y Fk(DRTable)p Fl(\()p Fb(fn1,)i(fn2,)j(f,)f(a,)h(b,)f(g)38
-b Fl([)p Fb(,)30 b(c)17 b Fl(]\):)0 4044 y(Calculate)j(the)h
+b Fl([)p Fb(,)30 b(c)17 b Fl(]\):)0 4064 y(Calculate)j(the)h
 (autoionization)e(rates)h(and)g(radiativ)n(e)f(transition)h(rates)g
 (needed)g(for)g(dielectronic)g(recom)n(bination.)33 b
-Fb(fn1)g Fl(is)0 4143 y(the)22 b(\014le)f(name)g(for)f(autoionization)g
+Fb(fn1)g Fl(is)0 4163 y(the)22 b(\014le)f(name)g(for)f(autoionization)g
 (rates.)34 b Fb(fn2)f Fl(is)21 b(the)h(\014le)f(name)g(for)g(radiativ)n
 (e)e(transition)i(rates.)34 b Fb(f)39 b Fl(is)21 b(the)g
-(con\014guration)0 4243 y(group)29 b(list)g(to)h(whic)n(h)g(the)g
+(con\014guration)0 4263 y(group)29 b(list)g(to)h(whic)n(h)g(the)g
 (autoionization)e(tak)n(es)h(place,)h(and)f Fb(a)37 b
 Fl(is)29 b(the)h(con\014guration)e(groups)h(for)g(the)h(corresp)r
-(onding)0 4343 y(autoionizing)i(states.)54 b Fb(b)38
+(onding)0 4363 y(autoionizing)i(states.)54 b Fb(b)38
 b Fl(is)c(the)f(con\014guration)f(groups)g(for)g(the)i(\014nal)f
 (states)g(of)g(radiativ)n(e)f(deca)n(y)g(from)h(those)g(states)0
-4442 y(in)f(the)f(groups)f Fb(a)39 b Fl(whic)n(h)31 b(are)g(connected)g
+4462 y(in)f(the)f(groups)f Fb(a)39 b Fl(whic)n(h)31 b(are)g(connected)g
 (to)g Fb(g)39 b Fl(b)n(y)31 b(autoionization.)47 b(Therefore,)31
 b Fb(g)39 b Fl(is)32 b(a)f(subset)g(of)g Fb(f)50 b Fl(from)31
-b(whic)n(h)g(the)0 4542 y(dielectronic)k(recom)n(bination)f(is)h(to)g
+b(whic)n(h)g(the)0 4562 y(dielectronic)k(recom)n(bination)f(is)h(to)g
 (o)r(curr.)59 b(The)35 b(optional)g(in)n(teger)f Fb(c)41
 b Fl(sp)r(eci\014es)35 b(the)h(c)n(hannel)e(iden)n(ti\014cation)i(for)e
-(the)0 4642 y(autoionization.)0 4825 y Fk(GetCFPOld)p
+(the)0 4661 y(autoionization.)0 4829 y Fk(GetCFPOld)p
 Fl(\()p Fb(j,)27 b(q,)k(dj,)g(dw,)f(pj,)h(pw)9 b Fl(\):)0
-4925 y(Return)26 b(the)h(co)r(e\016cien)n(t)f(of)g(fractional)f(paren)n
-(tage)f(\()p Fi(j)1722 4894 y Ff(q)r Fd(\000)p Fg(1)1844
-4925 y Fi(;)14 b(pj;)g(pw)r Fh(jg)p Fi(j)2201 4894 y
-Ff(q)2238 4925 y Fi(;)g(d)-9 b(j;)14 b(dw)r Fl(\),)28
+4929 y(Return)26 b(the)h(co)r(e\016cien)n(t)f(of)g(fractional)f(paren)n
+(tage)f(\()p Fi(j)1722 4898 y Ff(q)r Fd(\000)p Fg(1)1844
+4929 y Fi(;)14 b(pj;)g(pw)r Fh(jg)p Fi(j)2201 4898 y
+Ff(q)2238 4929 y Fi(;)g(d)-9 b(j;)14 b(dw)r Fl(\),)28
 b(where)d Fi(j)31 b Fl(is)26 b(the)h(angular)d(momen)n(tum)j(of)0
-5024 y(the)h(shell.)38 b Fi(q)31 b Fl(is)d(the)g(o)r(ccupation)g(of)g
+5028 y(the)h(shell.)38 b Fi(q)31 b Fl(is)d(the)g(o)r(ccupation)g(of)g
 (the)g(daugh)n(ter)f(state.)37 b Fi(pj)c Fl(and)28 b
 Fi(d)-9 b(j)33 b Fl(are)27 b(the)h(total)g(angular)e(momen)n(ta)h(of)h
-(the)h(paren)n(t)0 5124 y(and)35 b(daugh)n(ter)f(states.)60
+(the)h(paren)n(t)0 5128 y(and)35 b(daugh)n(ter)f(states.)60
 b Fi(pw)37 b Fl(and)f Fi(dw)i Fl(are)c(the)i(seneorit)n(y)e(of)h(paren)
 n(t)f(and)h(daugh)n(ter)f(states.)60 b(All)36 b(angular)d(momen)n(ta)0
-5223 y(app)r(earing)26 b(here)h(are)g(t)n(wice)h(of)f(their)h(actual)f
+5227 y(app)r(earing)26 b(here)h(are)g(t)n(wice)h(of)f(their)h(actual)f
 (v)-5 b(alues.)0 5513 y(42)p eop
 %%Page: 43 43
 43 42 bop 0 162 a Fk(GetCG)p Fl(\()p Fb(j1,)29 b(j2,)i(j3,)g(m1,)g(m2,)
